there are some bugs in the carousel will have to debug in a seperate proj. For now submitting what i have. For some reason the imgs are not cropped and sized appropriately to the carousel size.

--- a/css/main.scss
+++ b/css/main.scss
@@ -50,7 +50,7 @@ header.navigation{
         text-shadow: 0px 3px 3px gray;
     }
 }//header menu nav
-
+//HEROHEROHEROHEROHEROHEROHEROHEROHEROHEROHEROHEROHEROHEROHEROHEROHERO
 section.hero{
     .heroImg{
         position: absolute;
@@ -168,11 +168,41 @@ section.hero{
         background-color: #ffde59;
     }
 }
+//imageGALimageGALimageGALimageGALimageGALimageGALimageGALimageGALimageGALimageGALimageGAL
 section.imageGal{
-    height: 2em;
-    width: auto;
-    margin-bottom: 20em;
+    margin: 0;
+    padding: 0;
+    margin-top: 10em;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #38b6ff;
+    .slider{
+        width: 800px;
+        height: 500px;
+        border-radius: 10px;
+        overflow: hidden;
+        .slides{
+            width: 500%;
+            height: 500px;
+            display: flex;
+        }
+        .slides input{
+            display: none;
+        }
+        .slide{
+            width: 20%;
+            transition: 2s;
+        }
+        .slide img{
+            width: 800px;
+            height: 500px;
+            object-fit: cover;
+        }
+    }
 }
+//contactUScontactUScontactUScontactUScontactUScontactUScontactUScontactUScontactUS
 section.contactUs{
     position: relative;
     h1{ //contact us header
